include-in-mobile, include-in-desktop and require settings move to config.json file

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,6 @@
 		"google/apiclient": "1.1.7"
 	},
 	"extra": {
-		"installer-name": "Google",
-		"include-in-mobile": false,
-		"include-in-desktop": true
+		"installer-name": "Google"
 	}
 }
