Added descriptions for config parameters

--- a/config.json
+++ b/config.json
@@ -1,22 +1,42 @@
 {
-	"Disabled": [
-		false,
-		"bool"
-	],
-    "EnableModule": [
-        false,
-        "bool"
-    ],
-    "Id": [
-        "",
-        "string"
-    ],
-    "Secret": [
-        "",
-        "string"
-    ],
-    "Key": [
-        "",
-        "string"
-    ]
+  "Disabled": [
+    false,
+    "bool"
+  ],
+  "Disabled_Description": [
+    "",
+    "string"
+  ],
+  "EnableModule": [
+    false,
+    "bool"
+  ],
+  "EnableModule_Description": [
+    "",
+    "string"
+  ],
+  "Id": [
+    "",
+    "string"
+  ],
+  "Id_Description": [
+    "",
+    "string"
+  ],
+  "Secret": [
+    "",
+    "string"
+  ],
+  "Secret_Description": [
+    "",
+    "string"
+  ],
+  "Key": [
+    "",
+    "string"
+  ],
+  "Key_Description": [
+    "",
+    "string"
+  ]
 }
