added config descriptions

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
 		"bool"
 	],
 	"Disabled_Description": [
-		"",
+		"Setting to true disables the module",
 		"string"
 	],
 	"EnableModule": [
@@ -12,7 +12,7 @@
 		"bool"
 	],
 	"EnableModule_Description": [
-		"",
+		"Setting to true allows for using and configuring the module",
 		"string"
 	],
 	"Id": [
@@ -20,7 +20,7 @@
 		"string"
 	],
 	"Id_Description": [
-		"",
+		"App ID obtained from Google app settings",
 		"string"
 	],
 	"Secret": [
@@ -28,7 +28,7 @@
 		"string"
 	],
 	"Secret_Description": [
-		"",
+		"App secret obtained from Google app settings",
 		"string"
 	],
 	"Key": [
@@ -36,7 +36,7 @@
 		"string"
 	],
 	"Key_Description": [
-		"",
+		"API key obtained from Google app settings",
 		"string"
 	]
 }
